# WokshopN1

./: CMakeLists.txt  README.md
exercices/: exo10_light.cpp  exo11_disque.cpp  exo12_cercle.cpp  exo13_rosace.cpp  exo14_mosaique.cpp  exo15_mosaique_miroir.cpp  exo16_glitch.cpp  exo17_fractale_Mandelbrot.cpp  exo18_vortex.cpp  exo19_tramage.cpp  exo1_garder_que_vert.cpp  exo20_normalisation_histogramme.cpp  exo21_convolutions.cpp  exo2_echanger_canaux.cpp  exo3_noir_et_blanc.cpp  exo4_negatif.cpp  exo5_degrade.cpp  exo6_miroir.cpp  exo7_noise.cpp  exo8_rotation.cpp  exo9_split.cpp
src/: main.cpp
src/Cercle/: main.cpp
src/ColorerLaHeightMap/: main.cpp
src/Convolution/: main.cpp
src/Degrade/: main.cpp
src/DiamondSquare/: main.cpp
src/DifferenceDeGaussienne/: main.cpp
src/Disque/: main.cpp
src/EchangezLesCanaux/: main.cpp
src/FiltreDeKuwahara/: main.cpp
src/FiltreSeparable/: main.cpp
src/FractaleDeMandelbrot/: main.cpp
src/Glitch/: main.cpp
src/ImageBruitee/: main.cpp
src/KMeans/: main.cpp
src/Luminosite/: main.cpp
src/Miroir/: main.cpp
src/Mosaique/: main.cpp
src/MosaiqueMiroir/: main.cpp
src/NeGardezQueLeVert/: main.cpp
src/Negatif/: main.cpp
src/NetteteContour/: main.cpp
src/NoirEtBlanc/: main.cpp
src/NormalisationDeLhistogramme/: main.cpp
src/RgbSplit/: main.cpp
src/Rosace/: main.cpp
src/RotationDe90Deg/: main.cpp
src/Tramage/: main.cpp
src/TriDePixel/: main.cpp
src/Vortex/: main.cpp
